@@ -1,0 +1,45 @@
+# configuration for the EISMINT-2 test-case
+
+[EISMINT-2]
+
+[grid]
+# grid sizes
+ewn = 61
+nsn = 61
+upn = 11
+dew = 25000
+dns = 25000
+
+[options]
+temperature = 1
+flow_law = 0
+isostasy = 0
+marine_margin = 2
+stress_calc = 2
+evolution = 2
+basal_water = 0
+slip_coeff = 2
+sliding_law = 0
+vertical_integration = 1
+
+[time]
+tend = 50000.
+dt = 30.
+ntem = 1.
+nvel = 1.
+niso = 1.
+
+[parameters]
+flow_factor = 1
+geothermal = -42e-3
+basal_tract_const = 1.e-3
+
+[CF default]
+title: non-linear, dt=30a
+comment: EISMINT-2 Exp H, forced upper kinematic BC
+
+[CF output]
+name: nl-30a.nc
+frequency: 1000
+variables: thk bmlt temp uvel vvel wvel bwat
+
