@@ -1,3 +1,7 @@
+2005-03-05 Magnus Hagdorn
+ * add some missing config files
+ * tweak build system
+
 2005-03-04 Magnus Hagdorn
  * forgot make.rules.in
 
